v3.10.2 (XXXX-XX-XX)
--------------------

* Fixed Github issue #16451: In certain situations, a LIMIT inside a subquery
  could erroneously reduce the number of results of the containing (sub)query.

* Added a feature to the ResignLeadership job. By default, it will now
  undo the leader changes automatically after the server is restarted,
  unless the option `undoMoves` is set to `false`. This will help to
  make rolling upgrades and restarts less troublesome, since the shard
  leaderships will not get unbalanced.

* Add missing metrics for user traffic: Histograms:
    `arangodb_client_user_connection_statistics_bytes_received`
    `arangodb_client_user_connection_statistics_bytes_sent`
  These numbers were so far only published via the statistics API.
  This is needed for Oasis traffic accounting.

* Added agency options
    --agency.supervision-delay-add-follower
  and
    --agency.supervision-delay-failed-follower
  to delay supervision actions for a configurable amount of seconds. This is
  desirable in case a DBServer fails and comes back quickly, because it gives
  the cluster a chance to get in sync and fully resilient without deploying
  additional shard replicas and thus without causing any data imbalance.

* Enable "collect-in-cluster" optimizer rule for SmartGraph edge collections.

* Fixed SEARCH-408 Added "cache" columns feature for ArangoSearch.

* Fixed SEARCH-427 Fixed Inverted index usage of field with trackListPositions
  enabled.

* Fix HTTP/VST traffic accounting in internal statistics / metrics.

* Add serverId parameter to _admin/log/level. Allows to forward the request to
  other servers.

* Delay a MoveShard operation for leader change, until the old leader has
  actually assumed its leadership and until the new leader is actually in sync.
  This fixes a bug which could block a shard under certain circumstances. This
  fixes BTS-1110.

* Updated arangosync to v2.13.0.

* Fixed issue #17291: Server crash on error in the PRUNE expression.