@@ -36,6 +36,8 @@
 #include "Utilities/NameValidator.h"
 #include "VocBase/Methods/Databases.h"
 
+#include <absl/strings/str_cat.h>
+
 namespace arangodb {
 
 CreateDatabaseInfo::CreateDatabaseInfo(ArangodServer& server,
@@ -63,8 +65,7 @@ Result CreateDatabaseInfo::load(std::string const& name, uint64_t id) {
   return checkOptions();
 }
 
-Result CreateDatabaseInfo::load(VPackSlice const& options,
-                                VPackSlice const& users) {
+Result CreateDatabaseInfo::load(VPackSlice options, VPackSlice users) {
   Result res = extractOptions(options, true /*getId*/, true /*getUser*/);
   if (!res.ok()) {
     return res;
@@ -82,9 +83,8 @@ Result CreateDatabaseInfo::load(VPackSlice const& options,
   return checkOptions();
 }
 
-Result CreateDatabaseInfo::load(std::string const& name,
-                                VPackSlice const& options,
-                                VPackSlice const& users) {
+Result CreateDatabaseInfo::load(std::string const& name, VPackSlice options,
+                                VPackSlice users) {
   _name = methods::Databases::normalizeName(name);
 
   Result res = extractOptions(options, true /*getId*/, false /*getName*/);
@@ -105,8 +105,7 @@ Result CreateDatabaseInfo::load(std::string const& name,
 }
 
 Result CreateDatabaseInfo::load(std::string const& name, uint64_t id,
-                                VPackSlice const& options,
-                                VPackSlice const& users) {
+                                VPackSlice options, VPackSlice users) {
   _name = methods::Databases::normalizeName(name);
   _id = id;
 
@@ -163,7 +162,7 @@ void CreateDatabaseInfo::UsersToVelocyPack(VPackBuilder& builder) const {
 
 ArangodServer& CreateDatabaseInfo::server() const { return _server; }
 
-Result CreateDatabaseInfo::extractUsers(VPackSlice const& users) {
+Result CreateDatabaseInfo::extractUsers(VPackSlice users) {
   if (users.isNone() || users.isNull()) {
     return Result();
   } else if (!users.isArray()) {
@@ -172,7 +171,7 @@ Result CreateDatabaseInfo::extractUsers(VPackSlice const& users) {
     return Result(TRI_ERROR_HTTP_BAD_PARAMETER, "invalid users slice");
   }
 
-  for (VPackSlice const& user : VPackArrayIterator(users)) {
+  for (VPackSlice user : VPackArrayIterator(users)) {
     if (!user.isObject()) {
       events::CreateDatabase(_name, Result(TRI_ERROR_HTTP_BAD_PARAMETER),
                              _context);
@@ -197,8 +196,7 @@ Result CreateDatabaseInfo::extractUsers(VPackSlice const& users) {
     }
 
     std::string password;
-    if (user.hasKey("passwd")) {
-      VPackSlice passwd = user.get("passwd");
+    if (VPackSlice passwd = user.get("passwd"); !passwd.isNone()) {
       if (!passwd.isString()) {
         events::CreateDatabase(_name, Result(TRI_ERROR_HTTP_BAD_PARAMETER),
                                _context);
@@ -208,14 +206,12 @@ Result CreateDatabaseInfo::extractUsers(VPackSlice const& users) {
     }
 
     bool active = true;
-    VPackSlice act = user.get("active");
-    if (act.isBool()) {
+    if (VPackSlice act = user.get("active"); act.isBool()) {
       active = act.getBool();
     }
 
     std::shared_ptr<VPackBuilder> extraBuilder;
-    VPackSlice extra = user.get("extra");
-    if (extra.isObject()) {
+    if (VPackSlice extra = user.get("extra"); extra.isObject()) {
       extraBuilder = std::make_shared<VPackBuilder>();
       extraBuilder->add(extra);
     }
@@ -230,10 +226,10 @@ Result CreateDatabaseInfo::extractUsers(VPackSlice const& users) {
   return Result();
 }
 
-Result CreateDatabaseInfo::extractOptions(VPackSlice const& options,
-                                          bool extractId, bool extractName) {
+Result CreateDatabaseInfo::extractOptions(VPackSlice options, bool extractId,
+                                          bool extractName) {
   if (options.isNone() || options.isNull()) {
-    return Result();
+    options = VPackSlice::emptyObjectSlice();
   }
   if (!options.isObject()) {
     events::CreateDatabase(_name, Result(TRI_ERROR_HTTP_BAD_PARAMETER),
@@ -310,8 +306,7 @@ VocbaseOptions getVocbaseOptions(ArangodServer& server, VPackSlice options) {
 
   {
     auto shardingSlice = options.get(StaticStrings::Sharding);
-    if (shardingSlice.isString() &&
-        shardingSlice.compareString("single") == 0) {
+    if (shardingSlice.isString() && shardingSlice.stringView() == "single") {
       vocbaseOptions.sharding = shardingSlice.copyString();
     }
   }
@@ -321,7 +316,7 @@ VocbaseOptions getVocbaseOptions(ArangodServer& server, VPackSlice options) {
     VPackSlice replicationSlice = options.get(StaticStrings::ReplicationFactor);
     bool isSatellite =
         (replicationSlice.isString() &&
-         replicationSlice.compareString(StaticStrings::Satellite) == 0);
+         replicationSlice.stringView() == StaticStrings::Satellite);
     bool isNumber = replicationSlice.isNumber();
     isSatellite = isSatellite || (isNumber && replicationSlice.getUInt() == 0);
     if (!isSatellite && !isNumber) {
@@ -338,6 +333,29 @@ VocbaseOptions getVocbaseOptions(ArangodServer& server, VPackSlice options) {
       vocbaseOptions.replicationFactor =
           replicationSlice
               .getNumber<decltype(vocbaseOptions.replicationFactor)>();
+      if (haveCluster) {
+        auto const minReplicationFactor =
+            server.getFeature<ClusterFeature>().minReplicationFactor();
+        auto const maxReplicationFactor =
+            server.getFeature<ClusterFeature>().maxReplicationFactor();
+        // make sure the replicationFactor value is between the configured min
+        // and max values
+        if (0 < maxReplicationFactor &&
+            maxReplicationFactor < vocbaseOptions.replicationFactor) {
+          THROW_ARANGO_EXCEPTION_MESSAGE(
+              TRI_ERROR_BAD_PARAMETER,
+              absl::StrCat("replicationFactor must not be higher than "
+                           "maximum allowed replicationFactor (",
+                           maxReplicationFactor, ")"));
+        } else if (0 < minReplicationFactor &&
+                   vocbaseOptions.replicationFactor < minReplicationFactor) {
+          THROW_ARANGO_EXCEPTION_MESSAGE(
+              TRI_ERROR_BAD_PARAMETER,
+              absl::StrCat("replicationFactor must not be lower than "
+                           "minimum allowed replicationFactor (",
+                           minReplicationFactor, ")"));
+        }
+      }
     }
 #ifndef USE_ENTERPRISE
     if (vocbaseOptions.replicationFactor == 0) {
