@@ -23,13 +23,14 @@
 
 #pragma once
 
-#include <velocypack/Builder.h>
-#include <velocypack/Slice.h>
 #include "Basics/Result.h"
 #include "Basics/debugging.h"
 #include "RestServer/arangod.h"
 #include "Utils/OperationOptions.h"
 #include "VocBase/voc-types.h"
+
+#include <velocypack/Builder.h>
+#include <velocypack/Slice.h>
 
 struct TRI_vocbase_t;
 
@@ -78,13 +79,13 @@ class CreateDatabaseInfo {
   CreateDatabaseInfo(ArangodServer&, ExecContext const&);
   Result load(std::string const& name, uint64_t id);
 
-  Result load(std::string const& name, VPackSlice const& options,
-              VPackSlice const& users = VPackSlice::emptyArraySlice());
+  Result load(std::string const& name, VPackSlice options,
+              VPackSlice users = VPackSlice::emptyArraySlice());
 
-  Result load(std::string const& name, uint64_t id, VPackSlice const& options,
-              VPackSlice const& users);
+  Result load(std::string const& name, uint64_t id, VPackSlice options,
+              VPackSlice users);
 
-  Result load(VPackSlice const& options, VPackSlice const& users);
+  Result load(VPackSlice options, VPackSlice users);
 
   void toVelocyPack(VPackBuilder& builder, bool withUsers = false) const;
   void UsersToVelocyPack(VPackBuilder& builder) const;
@@ -131,8 +132,8 @@ class CreateDatabaseInfo {
   void shardingPrototype(ShardingPrototype type);
 
  private:
-  Result extractUsers(VPackSlice const& users);
-  Result extractOptions(VPackSlice const& options, bool extactId = true,
+  Result extractUsers(VPackSlice users);
+  Result extractOptions(VPackSlice options, bool extactId = true,
                         bool extractName = true);
   Result checkOptions();
 
