@@ -50,6 +50,48 @@ function testSuite() {
     tearDown: function() {
       db._drop(cn);
     },
+
+    testCreateDatabaseNoReplicationFactor : function() {
+      db._createDatabase(cn + "Database");
+      try {
+        db._useDatabase(cn + "Database");
+        let props = db._properties();
+        assertEqual(2, props.replicationFactor);
+      } finally {
+        db._useDatabase("_system");
+        db._dropDatabase(cn + "Database");
+      }
+    },
+    
+    testCreateDatabaseWithReplicationFactor : function() {
+      db._createDatabase(cn + "Database", { replicationFactor: 2 });
+      try {
+        db._useDatabase(cn + "Database");
+        let props = db._properties();
+        assertEqual(2, props.replicationFactor);
+      } finally {
+        db._useDatabase("_system");
+        db._dropDatabase(cn + "Database");
+      }
+    },
+    
+    testCreateDatabaseTooLowReplicationFactor : function() {
+      try {
+        db._createDatabase(cn + "Database", { replicationFactor: 1 });
+        fail();
+      } catch (err) {
+        assertEqual(errors.ERROR_BAD_PARAMETER.code, err.errorNum);
+      }
+    },
+    
+    testCreateDatabaseTooHighReplicationFactor : function() {
+      try {
+        db._createDatabase(cn + "Database", { replicationFactor: 4 });
+        fail();
+      } catch (err) {
+        assertEqual(errors.ERROR_BAD_PARAMETER.code, err.errorNum);
+      }
+    },
     
     testCreateCollectionNoShards : function() {
       let c = db._create(cn);
@@ -78,6 +120,12 @@ function testSuite() {
       }
     },
     
+    testCreateCollectionNoReplicationFactor : function() {
+      let c = db._create(cn);
+      let props = c.properties();
+      assertEqual(2, props.replicationFactor);
+    },
+    
     testCreateCollectionMinReplicationFactor : function() {
       let c = db._create(cn, { replicationFactor: 2 });
       let props = c.properties();
@@ -101,6 +149,18 @@ function testSuite() {
       let c = db._create(cn, { replicationFactor: 4 }, 2, { enforceReplicationFactor: false });
       let props = c.properties();
       assertEqual(4, props.replicationFactor);
+    },
+    
+    testCreateCollectionChangeReplicationFactor : function() {
+      let c = db._create(cn, { replicationFactor: 2 });
+      let props = c.properties();
+      assertEqual(2, props.replicationFactor);
+      try {
+        c.properties({ replicationFactor: 1 });
+        fail();
+      } catch (err) {
+        assertEqual(errors.ERROR_BAD_PARAMETER.code, err.errorNum);
+      }
     },
 
     testCreateGraph : function() {
