@@ -1,6 +1,11 @@
 v3.10.2 (XXXX-XX-XX)
 --------------------
 
+* Disallow creating new databases with a `replicationFactor` value set to a
+  value lower than `--cluster.min-replication-factor` or higher than
+  `--cluster.max-replication-factor`. Previously the `replicationFactor`
+  settings for new databases were not bounds-checked, only for new collections.
+
 * Fixed Github issue #16451: In certain situations, a LIMIT inside a subquery
   could erroneously reduce the number of results of the containing (sub)query.
 
